Ajout des blocks permettant d'afficher les vues des formulaires d'oubli de password

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -67,6 +67,8 @@
         {% block home %}{% endblock %}
         {% block login %}{% endblock %}
         {% block registration %}{% endblock %}
+        {% block forgottenPassword %}{% endblock %}
+        {% block resetPassword %}{% endblock %}
         {% block recipeList %}{% endblock %}
         {% block currentUserRecipes %}{% endblock %}
         {% block createRecipe %}{% endblock %}
