--- a/public/css/style.css
+++ b/public/css/style.css
@@ -284,6 +284,46 @@ body {
 }
 
 /*--------------------------------------------------------------------------------------------------------------------*/
+/* ForgetPasswordPage */
+
+.card-forgetPassword {
+    border-radius: 30px !important;
+    border: 3px solid var(--main-color-four) !important;
+    background-color: var(--main-font-color) !important;
+    color: var(--main-color-two) !important;
+    overflow: hidden !important;
+}
+
+#forget_password_email {
+    color: var(--main-color-two) !important;
+    background-color: var(--main-font-color) !important;
+    border-color: 2px solid var(--main-color-two) !important;
+}
+
+/*--------------------------------------------------------------------------------------------------------------------*/
+/* ResetPasswordPage */
+
+.card-resetPassword {
+    border-radius: 30px !important;
+    border: 3px solid var(--main-color-four) !important;
+    background-color: var(--main-font-color) !important;
+    color: var(--main-color-two) !important;
+    overflow: hidden !important;
+}
+
+#reset_password_plainPassword_first {
+    color: var(--main-color-two) !important;
+    background-color: var(--main-font-color) !important;
+    border-color: 2px solid var(--main-color-two) !important;
+}
+
+#reset_password_plainPassword_second {
+    color: var(--main-color-two) !important;
+    background-color: var(--main-font-color) !important;
+    border-color: 2px solid var(--main-color-two) !important;
+}
+
+/*--------------------------------------------------------------------------------------------------------------------*/
 /* RecipeListUserPage */
 
 .card-recipeListUser {
