--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -2,62 +2,134 @@
 
 {% block home %}
 
-    <br/>
+    <div class="col-lg-12">
 
-    <div class="col-lg-10 offset-lg-1">
-        <div class="container">
-            <h1>Bienvenue sur le blog de recette</h1>
-            <p>Ici, vous pourrez consulter, créer différentes recettes et laisser des commentaires.</p>
-            <p>Belle journée et profitez de nos succulentes recettes !</p>
-        </div>
-    </div>
+        <br/>
 
-    <div class="col-lg-8 offset-lg-2">
-        <h2><strong>Les dernières recettes publiées :</strong></h2>
-    </div>
-
-    <br/>
-
-    <div class="col-lg-8 offset-lg-2">
-        <div id="carouselExampleCaptions" class="carousel carousel-dark slide recipeCarousel" data-bs-ride="carousel">
-
-            <ol class="carousel-indicators">
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
-                <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"></li>
-            </ol>
-
-            <div class="carousel-inner">
-                {% for recipe in recipes %}
-                {% if loop.index == 1 %}
-                <div class="carousel-item active">
-                    {% else %}
-                    <div class="carousel-item">
-                        {% endif %}
-                        <img class="card-img img-carousel" src="https://picsum.photos/200/100" alt="{{ recipe.title }}">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>{{ recipe.category.name|capitalize }}</h5>
-                            <h4>{{ recipe.title }}</h4>
-                            <p>
-                                <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
-                            </p>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Précédent</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Suivant</span>
-                </a>
+        <div class="col-lg-10 offset-lg-1">
+            <div class="container">
+                <h1>Bienvenue sur le blog de recette</h1>
+                <p>Ici, vous pourrez consulter, créer différentes recettes et laisser des commentaires.</p>
+                <p>Belle journée et profitez de nos succulentes recettes !</p>
             </div>
-
         </div>
+
+        <div class="col-lg-8 offset-lg-2">
+            <h2><strong>Les dernières recettes publiées :</strong></h2>
+        </div>
+
+        <br/>
+
+        <div class="col-lg-8 offset-lg-2">
+            <div id="carouselExampleCaptions" class="carousel carousel-dark slide recipeCarousel" data-bs-ride="carousel">
+
+                <ol class="carousel-indicators">
+                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
+                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
+                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
+                    <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"></li>
+                </ol>
+
+                <div class="carousel-inner">
+                    {% for recipe in recipes %}
+                    {% if loop.index == 1 %}
+                    <div class="carousel-item active">
+                        {% else %}
+                        <div class="carousel-item">
+                            {% endif %}
+                            <img class="card-img img-carousel" src="https://picsum.photos/200/100" alt="{{ recipe.title }}">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>{{ recipe.category.name|capitalize }}</h5>
+                                <h4>{{ recipe.title }}</h4>
+                                <p>
+                                    <a href="{{ path('blog_read', { id: recipe.id }) }}">Lire la suite</a>
+                                </p>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Précédent</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Suivant</span>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+        <br/>
+
+        <div class="col-lg-6 offset-lg-3">
+            <div class="container">
+                <div class="row">
+                    <button class="btn btn-categoryHome col-lg-3">Toutes les recettes</button>
+                    <button class="btn btn-categoryHome col-lg-3">Entrées</button>
+                    <button class="btn btn-categoryHome col-lg-3">Plats</button>
+                    <button class="btn btn-categoryHome col-lg-3">Desserts</button>
+                </div>
+            </div>
+        </div>
+
+        <br/>
+
+        <div class="card card-thematic col-lg-8 offset-lg-2">
+            <br/>
+            <div class="card-title center"><h3>Thématiques</h3></div>
+            <div class="col-lg-10 offset-lg-1">
+                <div class="row">
+                    <div class="thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/paella.jpg') }}">
+                        <div class="thematicName">Plats étrangers</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/snack.jpg') }}">
+                        <div class="thematicName">Snacks</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/anniv.jpg') }}">
+                        <div class="thematicName">Anniversaires</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/végétarien.jpg') }}">
+                        <div class="thematicName">Végétarien</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/noël.jpg') }}">
+                        <div class="thematicName">Noël</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/américain.jpg') }}">
+                        <div class="thematicName">Recettes américaines</div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/apéritifs.jpg') }}">
+                        <div class="thematicName">Apéritifs</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/sans-oeufs.jpg') }}">
+                        <div class="thematicName">Sans oeufs</div>
+                    </div>
+                    <div class="container thematic-child col-4 mb-3">
+                        <img class="card-img thematicImg" src="{{ asset('images/pizza.jpg') }}">
+                        <div class="thematicName">Pizza</div>
+                    </div>
+                </div>
+            </div>
+            <br/>
+        </div>
+
+        <br/>
+        <br/>
+
     </div>
 
 {% endblock %}
