Modification de différents éléments visuels

--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -78,7 +78,7 @@
                 <!-- Btn d'appel à la modale -->
                 <div class="col-lg-6">
                     <div class="col-lg-4 offset-lg-4">
-                        <a href="#" class="btn readRecipe-deleteBtn" data-bs-toggle="modal" data-bs-target="#modalRecipeDelete" data-id="{{ recipe.id }}" data-title="{{ recipe.title }}">Supprimer</a>
+                        <a href="#" class="btn readRecipe-deleteBtn" data-bs-toggle="modal" data-bs-target="#modalRecipeDelete" data-id="{{ recipe.id }}" data-title="{{ recipe.title }}"><i class="bi bi-trash-fill"></i> Supprimer</a>
                     </div>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Supprimer la recette</h5>
+                        <h5 class="modal-title" id="exampleModalLabel"><i class="bi bi-trash-fill"></i> Supprimer la recette</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
