--- a/public/css/style.css
+++ b/public/css/style.css
@@ -170,8 +170,6 @@ body {
 .logoutLink {
     color: var(--danger-color) !important;
     background-color: var(--main-font-color) !important;
-    /*border: 3px solid #dc3545 !important;*/
-    /*border-radius: 30px !important;*/
 }
 .logoutLink:hover {
     color: var(--main-font-color) !important;
@@ -184,6 +182,41 @@ body {
 }
 .img-carousel {
     max-height: 400px !important;
+}
+
+.carousel-control-next-icon, .carousel-control-prev-icon {
+    display: inline-block !important;
+    width: 4rem !important;
+    height: 4rem !important;
+    background-repeat: no-repeat !important;
+    background-position: 50% !important;
+    background-size: 100% 100% !important;
+    color: var(--main-color-two) !important;
+}
+
+.carousel-dark .carousel-indicators li {
+    background-color: var(--main-color-two) !important;
+}
+.carousel-indicators li {
+    box-sizing: content-box !important;
+    flex: 0 1 auto !important;
+    width: 30px !important;
+    height: 30px !important;
+    margin-right: 3px !important;
+    margin-left: 3px !important;
+    text-indent: -999px !important;
+    cursor: pointer !important;
+    /*background-color: #fff !important;*/
+    background-clip: padding-box !important;
+    border-top: 0 solid transparent !important;
+    border-bottom: 0 solid transparent !important;
+    border-radius: 30px !important;
+    opacity: .5 !important;
+    transition: opacity .6s ease !important;
+}
+.carousel-indicators .active {
+    opacity: 1 !important;
+    background-color: var(--main-color-two) !important;
 }
 
 /* Bandeau des catégories des recettes */
@@ -215,6 +248,7 @@ body {
 .thematic-child:hover {
     opacity: 0.9 !important;
     font-size: 240% !important;
+    cursor: pointer !important;
 }
 .thematicImg {
     width: 314px !important;
@@ -372,10 +406,21 @@ body {
 }
 
 /*--------------------------------------------------------------------------------------------------------------------*/
-/* RecipeListUserPage */
+/* AccountUserPage */
+
+.btn-firstRecipe {
+    border-radius: 30px !important;
+    color: var(--main-font-color) !important;
+    background-color: var(--main-color-two) !important;
+    border-color: 2px solid var(--main-font-color) !important;
+}
+.btn-firstRecipe:hover {
+    color: var(--main-color-two) !important;
+    background-color: var(--main-color-one) !important;
+    border-color: 2px solid var(--main-color-two) !important;
+}
 
 .card-recipeListUser {
-    border-radius: 30px !important;
     border: 3px solid var(--main-color-two) !important;
     background-color: var(--main-color-three) !important;
     overflow: hidden !important;
@@ -406,7 +451,7 @@ body {
 }
 
 .emptyPageToFooter {
-    min-height: 550px !important;
+    min-height: 400px !important;
 }
 
 .spaceToFooter {
@@ -461,7 +506,6 @@ body {
 
 /* Design des cards de recettes */
 .card-recipeList {
-    border-radius: 30px !important;
     border: 3px solid var(--main-color-four) !important;
     background-color: var(--main-color-four) !important;
     overflow: hidden !important;
@@ -561,7 +605,7 @@ textarea#recipe_content {
     border-color: 2px solid var(--main-color-two) !important;
 }
 
- .btn-publish, .btn-modify {
+.btn-publish, .btn-modify {
     border-radius: 30px !important;
     color: var(--main-font-color) !important;
     background-color: var(--main-color-two) !important;
