--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
                 &nbsp;
                 {% if is_granted("ROLE_USER") %}
                     <div class="nav-item">
-                        <a {% if 'blog_create' in app.request.attributes.get('_route') %} class="active btn recipeCreateBtn" {% endif %} class="btn recipeCreateBtn" aria-current="page" href="{{ path('blog_create') }}">Publier une nouvelle recette <i class="bi bi-plus"></i></a>
+                        <a {% if 'blog_create' in app.request.attributes.get('_route') %} class="active btn recipeCreateBtn" {% endif %} class="btn recipeCreateBtn" aria-current="page" href="{{ path('blog_create') }}">Publier une nouvelle recette <i class="bi bi-plus-circle-fill"></i></a>
                     </div>
                     <div class="dropdown">
                         <button class="btn btn-secondary dropdown-toggle accountDropdown" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
