--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -127,6 +127,7 @@
 
     {% block javascripts %}
         <!-- Optional JavaScript; choose one of the two! -->
+        <script type="text/javascript" src="{{ asset('js/addIngredientForm.js') }}"></script>
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
