--- a/templates/blog/read.html.twig
+++ b/templates/blog/read.html.twig
@@ -13,20 +13,72 @@
     <div class="col-lg-8 offset-lg-2">
         <div class="row">
             <h1>{{ recipe.category.name|capitalize }} - <strong class="italic-text">{{ recipe.title }}</strong>
+{#                {% if is_granted("ROLE_USER") %}#}
+{#                    {% for favorite in recipe.favorite %}#}
+{#                        {% if favorite.id == app.user.id %}#}
+{#                            <a href="{{ path('remove_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart-fill recipeList_favorite"></i></a>#}
+{#                        {% else %}#}
+{#                            <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>#}
+{#                        {% endif %}#}
+{#                    {% else %}#}
+{#                        <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>#}
+{#                    {% endfor %}#}
+{#                {% else %}#}
+{#                    <i class="bi bi-suit-heart recipeList_favorite"></i>#}
+{#                {% endif %}#}
+
+{#                {% if is_granted("ROLE_USER") %}#}
+{#                    {% set isFavorite = false %}#}
+{#                    {% for favorite in recipe.favorite %}#}
+{#                        {% if favorite.id == app.user.id %}#}
+{#                            {% set isFavorite = true %}#}
+{#                        {% endif %}#}
+{#                    {% endfor %}#}
+{#                    {% if isFavorite %}#}
+{#                        <a href="{{ path('remove_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart-fill recipeList_favorite"></i></a>#}
+{#                    {% else %}#}
+{#                        <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>#}
+{#                    {% endif %}#}
+{#                {% else %}#}
+{#                    <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>#}
+{#                {% endif %}#}
+
                 {% if is_granted("ROLE_USER") %}
+                    {% set isFavorite = false %}
                     {% for favorite in recipe.favorite %}
                         {% if favorite.id == app.user.id %}
-                            <a href="{{ path('remove_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart-fill recipeList_favorite"></i></a>
-                        {% else %}
-                            <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>
+                            {% set isFavorite = true %}
                         {% endif %}
-                    {% else %}
-                        <a href="{{ path('add_favorite', {id: recipe.id}) }}"><i class="bi bi-suit-heart recipeList_favorite"></i></a>
                     {% endfor %}
+                    {% if isFavorite %}
+                        <i id="removeFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart-fill recipeList_favorite"></i>
+                    {% else %}
+                        <i id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>
+                    {% endif %}
                 {% else %}
-                    <i class="bi bi-suit-heart recipeList_favorite"></i>
+                    <i id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>
                 {% endif %}
+
+{#                {% if is_granted("ROLE_USER") %}#}
+{#                    {% set isFavorite = false %}#}
+{#                    {% for favorite in recipe.favorite %}#}
+{#                        {% if favorite.id == app.user.id %}#}
+{#                            {% set isFavorite = true %}#}
+{#                        {% endif %}#}
+{#                    {% endfor %}#}
+{#                    {% if isFavorite %}#}
+{#                        <i onclick="putRemoveFav()" id="removeFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart-fill recipeList_favorite"></i>#}
+{#                    {% else %}#}
+{#                        <i onclick="putAddFav()" id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>#}
+{#                    {% endif %}#}
+{#                {% else %}#}
+{#                    <i onclick="putAddFav()" id="addFavourite" data-recipe-name="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>#}
+{#                {% endif %}#}
             </h1>
+{#            <div>#}
+{#                <a id="addFavourite" data-recipe-name="{{ recipe.title }}" href="#"><i class="bi bi-suit-heart recipeList_favorite"></i></a>#}
+{#                <a id="removeFavourite" data-recipe-name="{{ recipe.title }}" href="#"><i class="bi bi-suit-heart-fill recipeList_favorite"></i></a>#}
+{#            </div>#}
             <div>
                 {% if average is null %}
                     <h4>Pas de note pour le moment</h4>
@@ -48,7 +100,7 @@
                     <br/>
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-hourglass-split"></i> Temps de préparation :</h3>
-                        <p>{{ recipe.preparationTime|format_datetime('none', 'short', locale='fr') }}</p>
+                        <f>{{ recipe.preparationTime|format_datetime('none', 'short', locale='fr') }}</f>
                     </div>
                 </div>
                 <br/>
@@ -56,7 +108,7 @@
                     <br/>
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-hourglass-split"></i> Temps de cuisson :</h3>
-                        <p>{{ recipe.cookingTime|format_datetime('none', 'short', locale='fr') }}</p>
+                        <f>{{ recipe.cookingTime|format_datetime('none', 'short', locale='fr') }}</f>
                     </div>
                 </div>
                 <br/>
@@ -65,7 +117,7 @@
                     <div class="col-lg-10 offset-lg-1">
                         <h3><i class="bi bi-cart3"></i> Listes des ingrédients :</h3>
                         {% for ingredient in ingredient %}
-                            <p> - {{ ingredient.proportion }} {{ ingredient.name }}</p>
+                            <f> - {{ ingredient.proportion }} {{ ingredient.name }}</f>
                         {% endfor %}
                     </div>
                 </div>
@@ -75,7 +127,7 @@
                     <br/>
                     <div class="col-lg-10 offset-lg-1">
                         <h3>Préparation :</h3>
-                        <p class="read-content">{{ recipe.content | raw }}</p>
+                        <f class="read-content">{{ recipe.content | raw }}</f>
                     </div>
                 </div>
             </div>
@@ -114,7 +166,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>Êtes-vous sûr(e) de vouloir supprimer la recette "{{ recipe.title }}" ?</p>
+                        <f>Êtes-vous sûr(e) de vouloir supprimer la recette "{{ recipe.title }}" ?</f>
                     </div>
                     <div class="modal-footer">
                         <a class="btn readRecipe-cancelBtn" data-bs-dismiss="modal">Annuler</a>
@@ -153,7 +205,7 @@
                             <button class="btn btn-secondary" type="submit">Valider la note</button>
                         </div>
                     {% else %}
-                        <p>Pour noter cette recette, veuillez vous connecter.</p>
+                        <f>Pour noter cette recette, veuillez vous connecter.</f>
                     {% endif %}
                 </form>
             <br/>
@@ -191,6 +243,140 @@
 
             return output.join('');
         }
+
+        //------------------------------------------------------------------------------------
+
+        // Add and remove favourite recipe / fill = coeur plein
+        var $add = $("#addFavourite");
+        var $remove = $("#removeFavourite");
+        var $addFav = '<i id="addFavourite" data-item-id="{{ recipe.title }}" class="bi bi-suit-heart recipeList_favorite"></i>';
+        var $removeFav = '<i id="removeFavourite" data-item-id="{{ recipe.title }}" class="bi bi-suit-heart-fill recipeList_favorite"></i>';
+
+        $add.on("click", function() {
+            $add.replaceWith($removeFav);
+            // $add.hide();
+            // $remove.show();
+
+            var recipeName = $add.data("recipe-name");
+            alert("Recette ajoutée en favoris : " + recipeName);
+
+            // code AJAX pour ajouter la recette en favoris
+            $.ajax({
+                url: '{{ path('add_favorite', { id: recipe.id }) }}',
+                type: 'PUT',
+            });
+
+        });
+
+        $remove.on("click", function() {
+            // $add.show();
+            // $remove.hide();
+            $remove.replaceWith($addFav);
+
+            var recipeName = $remove.data("recipe-name");
+            alert("Recette supprimée des favoris : " + recipeName);
+
+            // code AJAX pour supprimer la recette en favoris
+            $.ajax({
+                url: '{{ path('remove_favorite', { id: recipe.id }) }}',
+                type: 'DELETE',
+            });
+
+        });
+
+
+        {#function putAddFav()#}
+        {#{#}
+        {#    var aF = document.getElementById("addFavourite");#}
+        {#    aF.onclick = function() {#}
+        {#        var $add = $("#addFavourite");#}
+        {#        var $remove = $("#removeFavourite");#}
+
+        {#        var recipeName = $add.data("recipe-name");#}
+        {#        alert("Recette ajoutée aux favoris : " + recipeName);#}
+
+        {#        $add.addClass("bi bi-suit-heart-fill");#}
+        {#        $add.removeClass("bi bi-suit-heart");#}
+        {#        aF.id = "removeFavourite";#}
+
+        {#        $.ajax({#}
+        {#            url: '{{ path('add_favorite', { id: recipe.id }) }}',#}
+        {#            type: 'PUT',#}
+        {#        });#}
+        {#    };#}
+        {#}#}
+
+        {#function putRemoveFav()#}
+        {#{#}
+        {#    var rF = document.getElementById("removeFavourite");#}
+        {#    rF.onclick = function() {#}
+        {#        var $add = $("#addFavourite");#}
+        {#        var $remove = $("#removeFavourite");#}
+
+        {#        var recipeName = $remove.data("recipe-name");#}
+        {#        alert("Recette supprimée des favoris : " + recipeName);#}
+
+        {#        $remove.addClass("bi bi-suit-heart");#}
+        {#        $remove.removeClass("bi bi-suit-heart-fill");#}
+        {#        rF.id = "addFavourite";#}
+
+        {#        $.ajax({#}
+        {#            url: '{{ path('remove_favorite', { id: recipe.id }) }}',#}
+        {#            type: 'DELETE',#}
+        {#        });#}
+        {#    };#}
+        {#}#}
+
+
+        {#function addRemoveFav()#}
+        {#{#}
+        {#    var aF = document.getElementById("addFavourite");#}
+        {#    var rF = document.getElementById("removeFavourite");#}
+
+        {#    if (document === aF) {#}
+        {#        var recipeName = aF.data("recipe-name");#}
+        {#        alert("Recette ajoutée aux favoris : " + recipeName);#}
+
+        {#        $.ajax({#}
+        {#            url: '{{ path('add_favorite', { id: recipe.id }) }}',#}
+        {#            type: 'PUT',#}
+        {#        });#}
+        {#    } else {#}
+        {#        var recipeName = rF.data("recipe-name");#}
+        {#        alert("Recette supprimée des favoris : " + recipeName);#}
+
+        {#        $.ajax({#}
+        {#            url: '{{ path('remove_favorite', { id: recipe.id }) }}',#}
+        {#            type: 'DELETE',#}
+        {#        });#}
+        {#    }#}
+        {#}#}
+
+
+        {#const add = document.querySelector("#addFavourite");#}
+        {#const remove = document.querySelector("#removeFavourite");#}
+
+        {#add.addEventListener("click", function () {#}
+        {#    this.className = "bi bi-suit-heart-fill recipeList_favorite";#}
+        {#    this.id = "removeFavourite";#}
+
+        {#    // code AJAX pour ajouter la recette en favoris#}
+        {#    $.ajax({#}
+        {#        url: '{{ path('add_favorite', { id: recipe.id }) }}',#}
+        {#        type: 'PUT',#}
+        {#    });#}
+        {#});#}
+
+        {#remove.addEventListener("click", function () {#}
+        {#    this.className = "bi bi-suit-heart recipeList_favorite";#}
+        {#    this.id = "addFavourite";#}
+
+        {#    // code AJAX pour ajouter la recette en favoris#}
+        {#    $.ajax({#}
+        {#        url: '{{ path('remove_favorite', { id: recipe.id }) }}',#}
+        {#        type: 'DELETE',#}
+        {#    });#}
+        {#});#}
     </script>
 
     <script src="{{ asset('js/ratingStars.js') }}"></script>
