Création de la vue avec les catégories de recettes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -74,6 +74,7 @@
         {% block forgottenPassword %}{% endblock %}
         {% block resetPassword %}{% endblock %}
         {% block recipeList %}{% endblock %}
+        {% block categoriesRecipes %}{% endblock %}
         {% block currentUserRecipes %}{% endblock %}
         {% block userFavoritesRecipes %}{% endblock %}
         {% block userAccountSettings %}{% endblock %}
